styles and images added

--- a/src/index.html
+++ b/src/index.html
@@ -9,81 +9,84 @@
 </head>
 
 <body>
-    <main>
-        <header>
-            <h1>TheDessert Bakery Menu</h1>
-            <p>Below we present our menu with their respective prices </p>
-        </header>
-        <section>
-            <h2>Bakery</h2>
-            <img src="" alt="">
-            <article class="item">
-                <p class="bakery-option">Bacon Sourdough</p>
-                <p class="price">3.50</p>
-            </article>
-            <article class="item">
-                <p class="bakery-option">Brownie</p>
-                <p class="price">3.00</p>
-            </article>
-            <article class="item">
-                <p class="bakery-option">Croissant</p>
-                <p class="price">1.50</p>
-            </article>
-            <article class="item">
-                <p class="bakery-option">Focaccia</p>
-                <p class="price">2.50</p>
-            </article>
-            <article class="item">
-                <p class="bakery-option">Coco's Tartaleta</p>
-                <p class="price">5.50</p>
-            </article>
-            <article class="item">
-                <p class="bakery-option">Lemon's Tartaleta</p>
-                <p class="price">6.50</p>
-            </article>
-        </section>
-        <section>
-            <h2>Cookies</h2>
-            <img src="" alt="">
-            <article class="item">
-                <p class="cookies-option">Chocolate Chunk Cookies</p>
-                <p class="price">1.90</p>
-            </article>
-            <article class="item">
-                <p class="cookies-option">Cream w/vanilla Cookies</p>
-                <p class="price">2.25</p>
-            </article>
-        </section>
-        <section>
-            <h2>Loaves(for slide)</h2>
-            <img src="" alt="">
-            <article class="item">
-                <p class="loaves-option">Banana Chocolate</p>
-                <p class="price">3.50</p>
-            </article>
-            <article class="item">
-                <p class="loaves-option">Carrot walnut</p>
-                <p class="price">3.50</p>
-            </article>
-        </section>
-        <section>
-            <h2>Bars</h2>
-            <img src="" alt="">
-            <article class="item">
-                <p class="bars-option">Chocolate bar</p>
-                <p class="price">5.50</p>
-            </article>
-            <article class="item">
-                <p class="bars-option">White Chocolate bar</p>
-                <p class="price">6.50</p>
-            </article>
-        </section>
-
-    </main>
-    <footer>
-        <p><a href="">Visit us at ...</a></p>
-        <p> &copy; 2023 - by egarcia. All rights reserved.</p>
-    </footer>
+    <div class="menu-container">
+        <main>
+            <header>
+                <h1>TheDessert Bakery Menu</h1>
+                <p class="description">Below we present our menu with their respective prices </p>
+            </header>
+            <hr />
+            <section>
+                <h2>Bakery</h2>
+                <img src="../img/bread.png" alt="Bread">
+                <article class="item">
+                    <p class="bakery-option">Bacon Sourdough</p>
+                    <p class="price">3.50</p>
+                </article>
+                <article class="item">
+                    <p class="bakery-option">Brownie</p>
+                    <p class="price">3.00</p>
+                </article>
+                <article class="item">
+                    <p class="bakery-option">Croissant</p>
+                    <p class="price">1.50</p>
+                </article>
+                <article class="item">
+                    <p class="bakery-option">Focaccia</p>
+                    <p class="price">2.50</p>
+                </article>
+                <article class="item">
+                    <p class="bakery-option">Coco's Tartaleta</p>
+                    <p class="price">5.50</p>
+                </article>
+                <article class="item">
+                    <p class="bakery-option">Lemon's Tartaleta</p>
+                    <p class="price">6.50</p>
+                </article>
+            </section>
+            <section>
+                <h2>Cookies</h2>
+                <img src="../img/cookie.png" alt="Cookies">
+                <article class="item">
+                    <p class="cookies-option">Chocolate Chunk Cookies</p>
+                    <p class="price">1.90</p>
+                </article>
+                <article class="item">
+                    <p class="cookies-option">Cream w/vanilla Cookies</p>
+                    <p class="price">2.25</p>
+                </article>
+            </section>
+            <section>
+                <h2>Loaves(for slide)</h2>
+                <img src="../img/slide-bread.png" alt="Loaves (for slide)">
+                <article class="item">
+                    <p class="loaves-option">Banana Chocolate</p>
+                    <p class="price">3.50</p>
+                </article>
+                <article class="item">
+                    <p class="loaves-option">Carrot walnut</p>
+                    <p class="price">3.50</p>
+                </article>
+            </section>
+            <section>
+                <h2>Bars</h2>
+                <img src="../img/bars.png" alt="bars">
+                <article class="item">
+                    <p class="bars-option">Chocolate bar</p>
+                    <p class="price">5.50</p>
+                </article>
+                <article class="item">
+                    <p class="bars-option">White Chocolate bar</p>
+                    <p class="price">6.50</p>
+                </article>
+            </section>
+        </main>
+        <hr />
+        <footer>
+            <p><a href="">Visit us at ...</a></p>
+            <p> &copy; 2023 - by egarcia. All rights reserved.</p>
+        </footer>
+    </div>
 </body>
 
 </html>
